iphone fix: forcing smaller width fixes overflow!

--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ body {
       
       #about-section .bio-image {
         grid-area: bioimage;
+        border-radius: 50%;
         padding-left: 3rem;
         max-width: 800px;
         height: auto; }
@@ -190,7 +191,8 @@ body {
         grid-template-areas: 'bioimage' 'bio' 'view1' 'view2' 'view3';}
     #about-section .bio-image {
         grid-area: bioimage;
-        padding-left: 0rem;
+        border-radius: 50%;
+        padding-left: 0.25rem;
         max-width: 800px;
         height: auto; }
     #about-section .bio {
@@ -198,4 +200,22 @@ body {
         max-width: 800px;
         width: 80%;
         overflow: hidden;}
+        #about-section .view1 {
+            grid-area: view1;
+            max-width: 800px;
+            width: 80%;
+            overflow:hidden;
+            height: auto; }
+        #about-section .view2 {
+            grid-area: view2;
+            max-width: 800px;
+            width: 80%;
+            overflow:hidden;
+            height: auto; }     
+        #about-section .view3 {
+            grid-area: view3;
+            max-width: 800px;
+            width: 80%;
+            overflow:hidden;
+            height: auto; }
 }
